unpackaged/main/default/objects/Discount__c/fields/Apply_To_All__c.field-meta.xml
<CustomField>
    <fullName>Apply_To_All__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Apply To All</label>
    <type>Checkbox</type>
</CustomField>