unpackaged/main/default/objects/Discount__c/fields/Booth_Area__c.field-meta.xml
<CustomField>
    <fullName>Booth_Area__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Booth Area</label>
    <referenceTo>Booth_Area__c</referenceTo>
    <relationshipLabel>Discounts</relationshipLabel>
    <relationshipName>Discounts</relationshipName>
    <type>Lookup</type>
</CustomField>