unpackaged/main/default/objects/Discount__c/fields/BoothAreaID__c.field-meta.xml
<CustomField>
    <fullName>BoothAreaID__c</fullName>
    <label>BoothAreaID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>