unpackaged/main/default/objects/Discount__c/fields/Discount__c.field-meta.xml
<CustomField>
    <fullName>Discount__c</fullName>
    <label>Discount %</label>
    <length>255</length>
    <type>Text</type>
</CustomField>