unpackaged/main/default/objects/Discount__c/fields/DiscountId__c.field-meta.xml
<CustomField>
    <fullName>DiscountId__c</fullName>
    <label>DiscountId</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>