unpackaged/main/default/objects/Discount__c/fields/LineOfBusiness__c.field-meta.xml
<CustomField>
    <fullName>LineOfBusiness__c</fullName>
    <label>Line Of Business</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ALL SERVICES</fullName>
            </value>
            <value>
                <fullName>AUDIO VISUAL</fullName>
            </value>
            <value>
                <fullName>ELECTRICAL OUTLETS</fullName>
            </value>
            <value>
                <fullName>GRAPHICS</fullName>
            </value>
            <value>
                <fullName>HANGING SIGN</fullName>
            </value>
            <value>
                <fullName>HANGING SIGN.Hanging Sign</fullName>
            </value>
            <value>
                <fullName>JANITORIAL.Janitorial</fullName>
            </value>
            <value>
                <fullName>LABOR</fullName>
            </value>
            <value>
                <fullName>LABOR.Elec Hang Sign</fullName>
            </value>
            <value>
                <fullName>LABOR.Electrical</fullName>
            </value>
            <value>
                <fullName>LABOR.I&amp;D</fullName>
            </value>
            <value>
                <fullName>LABOR.Material Handling</fullName>
            </value>
            <value>
                <fullName>LOGISTICS</fullName>
            </value>
            <value>
                <fullName>MATERIAL</fullName>
            </value>
            <value>
                <fullName>MATERIAL.Electrical</fullName>
            </value>
            <value>
                <fullName>PLUMBING</fullName>
            </value>
            <value>
                <fullName>PLUSH CARPET</fullName>
            </value>
            <value>
                <fullName>PRODUCTION</fullName>
            </value>
            <value>
                <fullName>SPECIALTY FURNITURE</fullName>
            </value>
            <value>
                <fullName>STANDARD CARPET</fullName>
            </value>
            <value>
                <fullName>STANDARD FURNITURE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>